Add Placeholder to remove whitespaces in Dashboard

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -75,7 +75,7 @@
 
                             <form action="uploadPost" method="POST">
 
-                                    <textarea class ="text-dark" rows="5" cols="20" name="postText">
+                                    <textarea class ="form-control" rows="5" cols="20" name="postText" placeholder="Schreibe deine Nachricht:">
                                     
                                     </textarea>
                                     <button type="submit" class="btn btn-success">Speichern!</button>
