--- a/views/notebook.ejs
+++ b/views/notebook.ejs
@@ -71,6 +71,9 @@
 				<li class="nav-item" style="padding: 9px 6px 5px 7.5px;">
 					<a class="nav-link" href="dashboard">Dashboard</a>
 				</li>
+				<li class="nav-item" style="padding: 9px 6px 5px 7.5px;">
+					<a class="nav-link" href="allUsers">Browse Users</a>
+				</li>
 			</ul>
 			<!--Logout Link-->
 			<ul class="navbar-nav ml-auto">
