--- a/views/notebook.ejs
+++ b/views/notebook.ejs
@@ -158,7 +158,7 @@
 
 			<!--Linkzeilen-->
 			<% for(var i = notes.length-1; i >= 0; i--) { %>
-				<div id="linkZeile" class="clearfix">
+				<div id="linkZeile" class="clearfix" style="border-radius: 4px;">
 					<dt style="color: #666666; float:right;"><%= notes[i].dateTime %></dt>
 					<% if(ckeckForImage(notes[i].link) == true) { %>
 					<dt><img src="<%= notes[i].link %>" style="max-width: 300px; max-height: 300px; float: left; margin-right: 10px;" alt="<%= notes[i].linkName %>"></dt>
