--- a/views/notebook.ejs
+++ b/views/notebook.ejs
@@ -3,19 +3,14 @@
 		<title>Notebook</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 		<style type="text/css">
 			body {
 				background-color: #333333;
 				color: #dfdbd2;
-				font-family: Arial, Helvetica, sans-serif;
-			}
-			nav.Oberste {
-				font-size: 0.9em;
 			}
 			a.notizLinks:link, a.notizLinks:active, a.notizLinks:visited {
 				text-decoration: none;
@@ -26,20 +21,26 @@
 				color: dodgerblue;
 				text-shadow: 1px 1px 5px #3e3d39;
 			}
-			div, a, i {
+			button.navi {
+				background-color: #222222;
+				color: #9d9d9d;
+				margin-top: 8px;
+			}
+			button.navi:hover {
+				background-color: #222222;
+				color: white;
+			}
+			div, a, li {
 				/*border: 1px solid #4CAF50;*/
 			}
-			div {
+			div.innenabst {
 				padding: 5px;
+			}
+			input {
+				margin-top: 4px;
 			}
 			.clearfix {
 				overflow: auto;
-			}
-			#cont_c25652f42e8ffff5711abca60ace0ac1 {
-				float: right;
-				top: 0;
-				right: 0;
-				padding: 0px;
 			}
 			#linkZeile {
 				margin: 10px 0px 0px 0px;
@@ -53,34 +54,22 @@
     <body>
 		<a name="Seitenbeginn"></a>
 		<!--Main Navbar-->
-		<nav class="navbar navbar-expand-md bg-light navbar-light Oberste" style="padding:0px;background-color: #f8f8f8;">
-			<!-- Links -->
-			<ul class="navbar-nav">
-				<li class="nav-item" style="font-size: 1.22em;margin: 6px 7px 3px 8px;">
-					<a class="nav-link" href="#">#YourBook#</a>
-				</li>
-				<li class="nav-item" style="padding: 9px 6px 5px 7.5px;background-color:#e7e7e7;">
-					<a class="nav-link" href="notebook">Notebook</a>
-				</li>
-				<li class="nav-item" style="padding: 9px 6px 5px 7.5px;">
-					<a class="nav-link" href="messenger">Messenger</a>
-				</li>
-				<li class="nav-item" style="padding: 9px 6px 5px 7.5px;">
-					<a class="nav-link" href="profile">Profile</a>
-				</li>
-				<li class="nav-item" style="padding: 9px 6px 5px 7.5px;">
-					<a class="nav-link" href="dashboard">Dashboard</a>
-				</li>
-				<li class="nav-item" style="padding: 9px 6px 5px 7.5px;">
-					<a class="nav-link" href="allUsers">Browse Users</a>
-				</li>
-			</ul>
-			<!--Logout Link-->
-			<ul class="navbar-nav ml-auto">
-				<li class="nav-item">						
-					<a class="nav-link" href="/logout" style="padding: 9px 15px 4px 0px;"><i class="fas fa-sign-out-alt"></i> Logout</a>
-				</li>
-			</ul>
+		<nav class="navbar navbar-default">
+			<div class="container-fluid">
+				<div class="navbar-header">
+					<a class="navbar-brand" href="#">#YourBook#</a>
+				</div>
+				<ul class="nav navbar-nav">
+					<li class="active"><a href="notebook">Notebook</a></li>
+					<li><a href="messenger">Messenger</a></li>
+					<li><a href="profile">Profile</a></li>
+					<li><a href="dashboard">Dashboard</a></li>
+					<li><a href="allUsers">Browse Users</a></li>
+				</ul>
+				<ul class="nav navbar-nav navbar-right">
+					<li><a href="/logout"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
+				</ul>
+			</div> 
 		</nav>
 		
 		<!--Eingabebereich-->
@@ -119,61 +108,48 @@
 			</div>
 		</div>
 
-		<!--Navileiste mit zwei Buttons-->
-		<nav style="margin-top: 20px" class="navbar navbar-expand-md bg-dark navbar-dark sticky-top">
-			<!-- Brand class="navbar-brand" -->
-			<a id="Ueberschrift" class="navbar-brand" title="Zum Seitenbeginn springen" href="#Seitenbeginn">Notebook</a>
-			<ul class="navbar-nav">
-				<li class="nav-item">
-					<button class="btn btn-light" data-toggle="collapse" data-target="#eingabeNeueNotiz">Neue Notiz</button>
-					<button class="btn btn-light" data-toggle="collapse" data-target="#eingabeNeuerOrdner">Neuen Ordner Erstellen</button>
-				</li>
-			</ul>
-			<a class="nav-link ml-auto" title="Zum Seitenbeginn springen" href="#Seitenbeginn" style="margin:0px;padding:0px;"><i class="fas fa-arrow-up" style="font-size:24px;color:#dfdbd2;"></i></a>
-		</nav>
-
-		<!--dasWetter-->
-		<!--<div id="cont_c25652f42e8ffff5711abca60ace0ac1"><script type="text/javascript" async src="https://www.daswetter.com/wid_loader/c25652f42e8ffff5711abca60ace0ac1"></script></div>-->
-
 		<!--Auflistung der Tabelle-->
-		<div class="container">
-			<nav style="padding: 15px 0px 0px 0px;" class="navbar navbar-expand-md navbar-dark">
+		<div class="container" style="margin-bottom: 10px;">
 			<form action="/onOrdnerAuswahl" method="POST">
-				
-					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-						<span class="navbar-toggler-icon"></span>
-					</button>
-					<div style="padding-left: 0px;" class="collapse navbar-collapse" id="collapsibleNavbar">
-						<ul class="navbar-nav">
-							<% for(var i = ordner.length-1; i >= 0; i--) { %>
-							<li style="margin: 0px 4px 4px 0px;" class="nav-item">
-								<button class="btn btn-dark" type="submit" name="ordner" value="<%= ordner[i].ordner %>"><%= ordner[i].ordner %></button>
-							</li>
-							<%}%>
-						</ul>
-					</div> 
-				
+				<nav class="navbar navbar-inverse">
+						<div class="container-fluid">
+							<div class="navbar-header">
+							<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+								<span class="icon-bar"></span>
+								<span class="icon-bar"></span>
+								<span class="icon-bar"></span>                        
+							</button>
+							<a class="navbar-brand" href="notebook">Notebook</a>
+							</div>
+							<div class="collapse navbar-collapse" id="myNavbar">
+							<ul class="nav navbar-nav">
+								<% for(var i = ordner.length-1; i >= 0; i--) { %>
+								<button class="btn navi" type="submit" name="ordner" value="<%= ordner[i].ordner %>"><%= ordner[i].ordner %></button>
+								<%}%>						
+							</ul>
+							<ul class="nav navbar-nav navbar-right">
+								<li><a data-toggle="collapse" data-target="#eingabeNeueNotiz" href="#">Neue Notiz</a></li>
+								<li><a data-toggle="collapse" data-target="#eingabeNeuerOrdner" href="#">Neuen Ordner Erstellen</a></li>
+							</ul>
+							</div>
+						</div>
+				</nav>
 			</form>
-			</nav>
-
 			<!--Linkzeilen-->
 			<% for(var i = notes.length-1; i >= 0; i--) { %>
 				<div id="linkZeile" class="clearfix" style="border-radius: 4px;">
-					<dt style="color: #666666; float:right;"><%= notes[i].dateTime %></dt>
+					<dt style="color: #666666; float:right; margin:5px;"><%= notes[i].dateTime %></dt>
 					<% if(ckeckForImage(notes[i].link) == true) { %>
 					<dt><img src="<%= notes[i].link %>" style="max-width: 300px; max-height: 300px; float: left; margin-right: 10px;" alt="<%= notes[i].linkName %>"></dt>
 					<% } else { %>
-					<dt><a href="<%= notes[i].link %>" class="notizLinks" target="_blank"><%= notes[i].linkName %></a></dt>
+					<dt style="margin:5px"><a href="<%= notes[i].link %>" class="notizLinks" target="_blank"><%= notes[i].linkName %></a></dt>
 					<% } %>
-					<dt style="white-space:pre-wrap; word-wrap:break-word; color:#dfdbd2;"><%= notes[i].notiz %></dt>
+					<dt style="white-space:pre-wrap;word-wrap:break-word;color:#dfdbd2;margin:5px;"><%= notes[i].notiz %></dt>
 				</div>
 			<%}%>
-
 		</div>
-
-		<div class="container footer navbar-fixed-bottom">
-			<p class="footer-text">Copyright 2018 ©</p>
+		<div class="navbar-fixed-bottom" style="background-color: rgba(255, 255, 255, 0.3);padding:3px;">
+			<a title="Zum Seitenbeginn springen" href="#Seitenbeginn"><i class="fas fa-arrow-up" style="font-size:24px;color:white;margin-left: 0.5%;"></i></a>
 		</div>
-
     </body>
 </html>
